Fix word wrapping Get four members by default

--- a/frontend/src/app/modules/bookings/booker/booker.component.sass
+++ b/frontend/src/app/modules/bookings/booker/booker.component.sass
@@ -22,6 +22,9 @@
 .itemText
     color: rgba($black, 0.5)
     margin: 0
+    font-size: 1em
+    word-wrap: break-word
+    white-space: pre
 
 .listItemAnswers
     font-weight: 600
