--- a/frontend/src/app/modules/bookings/bookings-page/bookings-page.component.sass
+++ b/frontend/src/app/modules/bookings/bookings-page/bookings-page.component.sass
@@ -6,7 +6,7 @@
 
 .bookings-container
     height: 100%
-    padding: 144px 130px
+    padding: 100px 100px
     display: flex
     flex-direction: column
     gap: 24px
@@ -72,7 +72,7 @@ p, span
     margin: 0
 
 .listScrollBlock
-    overflow-x: auto
+    overflow-x: hidden
     display: flex
     flex-direction: row
     gap: 20px
@@ -143,11 +143,11 @@ p, span
 
 @media only screen and (max-width: 1200px)
     .bookings-container
-        padding: 130px
+        padding: 100px
 
 @media only screen and (max-width: 800px)
     .bookings-container
-        padding: 130px
+        padding: 100px
 
 @media only screen and (max-width: 600px)
     .infoRow
